Replacing usages of deprecated consulo.ide.impl.idea.util.containers.ContainerUtil with consulo.util.collection.ContainerUtil (part 4). Refactoring. (#966)